--- a/CFn/elblog-to-firehose/cfn-s3-lambda-firehose.yaml
+++ b/CFn/elblog-to-firehose/cfn-s3-lambda-firehose.yaml
@@ -277,9 +277,9 @@ Resources:
         BucketARN: !Sub 'arn:aws:s3:::${Step4S3bucket}'
         BufferingHints:
           IntervalInSeconds: '300'
-          SizeInMBs: '10'
+          SizeInMBs: '50'
         CompressionFormat: GZIP
-        Prefix: firehose/
+        Prefix: firehose/alb_logs/
         RoleARN: !GetAtt 'Step3deliveryRole.Arn'
         ProcessingConfiguration:
           Enabled: 'false'
@@ -439,6 +439,8 @@ Resources:
           from datetime import datetime
           import base64
           import re
+          from itertools import groupby
+          from operator import itemgetter
 
           s3 = boto3.client('s3')
           cloudwatch = boto3.client('cloudwatch')
@@ -446,20 +448,17 @@ Resources:
           def lambda_handler(event, context):
             z = parse_s3_event(event)
             bucket_name = z['bucket_name']
-            key = z['key']            
-            #print ('bucket_name: ' + bucket_name)
-            #print ('key: ' + key)
+            key = z['key']
+
+            print ('bucket_name: ' + bucket_name)
+            print ('key: ' + key)
             response =s3.get_object(Bucket=bucket_name, Key=key)
             body = gzip.decompress(response['Body'].read()).decode('utf-8').splitlines()
+  
+            a = sort_log(body) 
+            b = aggregate_log_by_group(a)
+            c = put_cloudwatch(b)
             
-            hosts = GetUniqRequestUriHost(body)
-
-            for host in hosts:
-              print ('host: '+ host)
-              r = AggregateGroupbyRequestUriHost(body,host)
-
-              #print(str(r))
-              PutMetricData(r)
 
           def parse_s3_event(event):
             a = json.loads(event['Records'][0]['Sns']['Message'])
@@ -468,78 +467,108 @@ Resources:
             z['key'] = urllib.parse.unquote_plus(a['Records'][0]['s3']['object']['key'], encoding='utf-8')
             return z
 
-          def GetUniqRequestUriHost(data):
+          def sort_log(data):
+
             d = []
             for a in data:
               b = json.loads(a)
-              c = b['request_uri_host']
-              if c not in d:
-                d.append(c)
-            return(d)
+              c = {}
+              if b['request_uri_host'] is not None:
+                if b['request_uri_host'] is not None:
+                  c["request_uri_host"] = b['request_uri_host']
+                  c["timestamp_min"] = datetime.strptime(b['timestamp'], '%Y-%m-%dT%H:%M:%S.%fZ').replace(second=0, microsecond=0)
+                  c["timestamp"] = b['timestamp']
+                  c["received_bytes"] = b['received_bytes']
+                  c["sent_bytes"] = b['sent_bytes']
+                  d.append(c)
 
-          def AggregateGroupbyRequestUriHost(data,host):
+            e = sorted(d, key=itemgetter('request_uri_host','timestamp_min','timestamp'))
+            return e
 
-            total_received_bytes = 0
-            total_sent_bytes = 0
-            total_counts = 0
-            z = {}
+          def aggregate_log_by_group(data):
 
-            for a in data:
-              b = json.loads(a)
-              if b['request_uri_host'] == host:
-                total_received_bytes = total_received_bytes + b['received_bytes']
-                total_sent_bytes = total_sent_bytes + b['sent_bytes']
-                last_timestamp = b['timestamp']
-                total_counts = total_counts + 1
+            a = data
+            j = []
 
-            if total_counts > 0:
-              z["total_received_bytes"] = total_received_bytes
-              z["total_sent_bytes"] = total_sent_bytes
-              z["total_counts"] = total_counts
-              z["last_timestamp"] = datetime.strptime(last_timestamp, '%Y-%m-%dT%H:%M:%S.%fZ').replace(microsecond=0)
-              z["request_uri_host"] = host
+            for b in groupby(a, key=itemgetter('request_uri_host','timestamp_min')):
 
-            return(z)
+              d = []
+              e = []
 
-          def PutMetricData(data):
+              for c in b[1]:
+                d.append(c['received_bytes'])
+                e.append(c['sent_bytes'])
+                f = c['timestamp']
+                g = c['request_uri_host']
 
-            last_timestamp =  data["last_timestamp"]
-            request_uri_host = data["request_uri_host"]
-            sample_count = data["total_counts"]
-            total_sent_bytes = data["total_sent_bytes"]
-            total_received_bytes = data["total_received_bytes"]
-            
+              h = {}
+              h['received_bytes_sum'] = sum(d)
+              h['received_bytes_min'] = min(d)
+              h['received_bytes_max'] = max(d)
+              h['sent_bytes_sum'] = sum(e)
+              h['sent_bytes_min'] = min(e)
+              h['sent_bytes_max'] = max(e)
+              h['timestamp'] = datetime.strptime(f, '%Y-%m-%dT%H:%M:%S.%fZ').replace(microsecond=0)
+              h['logcount'] = len(d)
+              h['request_uri_host'] = g
+    
+              i = gen_metricdata_list(h)
+              j.extend(i)
+    
+            return j
+
+
+          def gen_metricdata_list(a):
+
             CfnStackName = os.environ['CfnStackName']
-
-            r = cloudwatch.put_metric_data(
-              Namespace= 'ALB_LOG' ,
-              MetricData=[
-                {
+    
+            b = {
                   'MetricName': 'sent_bytes',
-                  'Dimensions':  [{'Name': 'request_uri_host','Value': request_uri_host}, {'Name': 'StackName','Value': CfnStackName}],
-                  'Timestamp': last_timestamp,
+                  'Dimensions':  [{'Name': 'request_uri_host','Value': a['request_uri_host']}, {'Name': 'StackName','Value': CfnStackName}],
+                  'Timestamp': a['timestamp'],
                   'StatisticValues': {
-                    'SampleCount': sample_count,
-                    'Sum': total_sent_bytes,
-                    'Minimum': total_sent_bytes,
-                    'Maximum': total_sent_bytes,
+                    'SampleCount': a['logcount'],
+                    'Sum': a['sent_bytes_sum'],
+                    'Minimum': a['sent_bytes_min'],
+                    'Maximum': a['sent_bytes_max'],
                   },
                   'Unit': "Bytes"
-                },
-                {
+            }
+
+            c = {
                   'MetricName': 'received_bytes',
-                  'Dimensions':  [{'Name': 'request_uri_host','Value': request_uri_host}, {'Name': 'StackName','Value': CfnStackName}],
-                  'Timestamp': last_timestamp,
+                  'Dimensions':  [{'Name': 'request_uri_host','Value': a['request_uri_host']}, {'Name': 'StackName','Value': CfnStackName}],
+                  'Timestamp': a['timestamp'],
                   'StatisticValues': {
-                    'SampleCount': sample_count,
-                    'Sum': total_received_bytes,
-                    'Minimum': total_received_bytes,
-                    'Maximum': total_received_bytes,
+                    'SampleCount': a['logcount'],
+                    'Sum': a['received_bytes_sum'],
+                    'Minimum': a['received_bytes_min'],
+                    'Maximum': a['received_bytes_max'],
                   },
                   'Unit': "Bytes"
-                }
-              ]
+            }
+  
+            return [b,c]
+
+          def put_cloudwatch(data):
+            b = []
+            for a in data:
+              b.append(a)
+              if len(b) > 10:
+                c = put_cloudwatch_batch(b)
+                b = []
+            if len(b) > 0:
+              c = put_cloudwatch_batch(b)
+            return c
+
+          def put_cloudwatch_batch(data):
+            print(str(data))
+            r = cloudwatch.put_metric_data(
+              Namespace = 'alb_log' ,
+              MetricData = data
             )
+            return r
+
         
       Runtime: python3.6
       MemorySize: 256
