--- a/CFn/elblog-to-firehose/cfn-s3-lambda-firehose.yaml
+++ b/CFn/elblog-to-firehose/cfn-s3-lambda-firehose.yaml
@@ -63,7 +63,7 @@ Resources:
         Version: '2012-10-17'
         Id: MyTopicPolicy
         Statement:
-          - Sid: My-statement-id
+          - Sid: allow-publish-s3
             Effect: Allow
             Principal:
               Service:
@@ -77,7 +77,7 @@ Resources:
   Step2SnsTopic:
     Type: AWS::SNS::Topic
     Properties:
-      DisplayName: trigger-elb-log-parse
+      DisplayName: s3-trigger-elb-output
       Subscription:
         - Endpoint: !GetAtt 'Step3LambdaFunction.Arn'
           Protocol: lambda
@@ -151,17 +151,21 @@ Resources:
 
           s3 = boto3.client('s3')
           firehose = boto3.client('firehose')
-
+  
           def lambda_handler(event, context):
-            #event2 is sns message
-            event2 = json.loads(event['Records'][0]['Sns']['Message'])
-            bucket_name = event2['Records'][0]['s3']['bucket']['name']
-            key = urllib.parse.unquote_plus(event2['Records'][0]['s3']['object']['key'], encoding='utf-8')
-            #print ('bucket_name: ' + bucket_name)
-            #print ('key: ' + key)
+            z = parse_s3_event(event)
+            bucket_name = z['bucket_name']
+            key = z['key']
             response =s3.get_object(Bucket=bucket_name, Key=key)
             body = gzip.decompress(response['Body'].read()).decode('utf-8').splitlines()
             process_log(body)
+
+          def parse_s3_event(event):
+            a = json.loads(event['Records'][0]['Sns']['Message'])
+            z = {}
+            z['bucket_name'] = a['Records'][0]['s3']['bucket']['name']
+            z['key'] = urllib.parse.unquote_plus(a['Records'][0]['s3']['object']['key'], encoding='utf-8')
+            return z
 
           def process_log(data):
             i = 0
@@ -241,6 +245,12 @@ Resources:
                     z["request_uri_path"] = e.path
                     z["request_uri_query"] = e.query
                     z["request_uri_fragment"] = e.fragment
+                  else:
+                    z["request_uri_scheme"] = z["request_uri"].split(':')[0]
+                    z["request_uri_user"] = ''
+                    z["request_uri_host"] = z["request_uri"].split('/')[2].split(':')[0]
+                    z["request_uri_port"] = z["request_uri"].split(':')[2].split('-')[0]
+                    z["request_uri_path"] = ''
 
             #Column check (number, timestamp format)
             if len(z) > 4:
@@ -352,7 +362,7 @@ Resources:
         Version: '2012-10-17'
         Id: MyTopicPolicy
         Statement:
-        - Sid: My-statement-id
+        - Sid: allow-publish-s3
           Effect: Allow
           Principal:
             Service:
@@ -366,7 +376,7 @@ Resources:
   Step5SnsTopic:
     Type: AWS::SNS::Topic
     Properties:
-      DisplayName: trigger-firehose-s3-output
+      DisplayName: s3-trigger-firehose-output
       Subscription:
       - Endpoint: !GetAtt 'Step6LambdaFunction.Arn'
         Protocol: lambda
@@ -459,7 +469,6 @@ Resources:
             b = aggregate_log_by_group(a)
             c = put_cloudwatch(b)
             
-
           def parse_s3_event(event):
             a = json.loads(event['Records'][0]['Sns']['Message'])
             z = {}
@@ -517,7 +526,6 @@ Resources:
     
             return j
 
-
           def gen_metricdata_list(a):
 
             CfnStackName = os.environ['CfnStackName']
@@ -562,14 +570,13 @@ Resources:
             return c
 
           def put_cloudwatch_batch(data):
-            print(str(data))
+            #print(str(data))
             r = cloudwatch.put_metric_data(
               Namespace = 'alb_log' ,
               MetricData = data
             )
             return r
 
-        
       Runtime: python3.6
       MemorySize: 256
       Timeout: 300
@@ -580,7 +587,6 @@ Resources:
       Tags:
         - Key: CloudformationArn
           Value: !Ref 'AWS::StackId'
-
   Step7LambdaLambdaPermission:
     Type: AWS::Lambda::Permission
     Properties:
@@ -588,13 +594,11 @@ Resources:
       Action: lambda:InvokeFunction
       Principal: sns.amazonaws.com
       SourceArn: !Ref 'Step5SnsTopic'
-
   Step7LogGroupLambda:
     Type: AWS::Logs::LogGroup
     Properties:
       LogGroupName: !Sub '/aws/lambda/${Step7LambdaFunction}'
       RetentionInDays: 14
-
   Step7LambdaRole:
     Type: AWS::IAM::Role
     Properties:
