[modify] ログデータのUTF8デコードエラー回避 - 'utf-8' codec can't decode byte 0x83 in position #####: invalid start byte: UnicodeDecodeError 対策として「ignore」指定追加

--- a/CFn/accesslog-via-firehose/cfn-clb-log.yaml
+++ b/CFn/accesslog-via-firehose/cfn-clb-log.yaml
@@ -180,7 +180,7 @@ Resources:
             # Process CLB log (.log)
             if (re.match('.*.log$', key)):
               response =s3.get_object(Bucket=bucket_name, Key=key)
-              body = response['Body'].read().decode('utf-8').splitlines()
+              body = response['Body'].read().decode('utf-8','ignore').splitlines()
               if len(body) > 0:
                 process_log(body)
         
