--- a/CFn/accesslog-via-firehose/cfn-alb-log.yaml
+++ b/CFn/accesslog-via-firehose/cfn-alb-log.yaml
@@ -186,7 +186,7 @@ Resources:
             # Process ALB log (gzip)
             if (re.match('.*.gz$', key)):
               response =s3.get_object(Bucket=bucket_name, Key=key)
-              body = gzip.decompress(response['Body'].read()).decode('utf-8').splitlines()
+              body = gzip.decompress(response['Body'].read()).decode('utf-8','ignore').splitlines()
               if len(body) > 0:
                 process_log(body)
 
