[modify] can-flipで整形

--- a/CFn/aurora-mysql-57/aurora-mysql57-multiaz.yaml
+++ b/CFn/aurora-mysql-57/aurora-mysql57-multiaz.yaml
@@ -16,7 +16,6 @@ Parameters:
     Description: AP VPC subnet
     Type: String
     Default: 172.31.0.0/16
-
   RdsDbDatabaseName:
     Description: DbDatabaseName
     Type: String
@@ -34,7 +33,6 @@ Parameters:
     Description: DBInstanceClass
     Type: String
     Default: db.t2.small
-
   Env:
     Description: Choose the environment to create
     Type: String
@@ -43,7 +41,6 @@ Parameters:
     - development
     - staging
     - production
-
   MultiAzEnable:
     Description: Choose MultiAz Enable
     Type: String
@@ -51,40 +48,36 @@ Parameters:
     AllowedValues:
     - true
     - false
-
-Conditions: 
-  MultiAzEnable: !Equals [ !Ref MultiAzEnable, true ]
-
+Conditions:
+  MultiAzEnable: !Equals [!Ref 'MultiAzEnable', true]
 Resources:
   RdsDbSubnetGroup:
     Type: AWS::RDS::DBSubnetGroup
     Properties:
       DBSubnetGroupDescription: Database subnets for RDS
       SubnetIds:
-        - !Ref VpcRdsSubnetId1
-        - !Ref VpcRdsSubnetId2
+      - !Ref 'VpcRdsSubnetId1'
+      - !Ref 'VpcRdsSubnetId2'
       Tags:
-        - Key: CloudFormationArn
-          Value: !Ref 'AWS::StackId'
-        - Key: Env
-          Value: !Ref Env
-
+      - Key: CloudFormationArn
+        Value: !Ref 'AWS::StackId'
+      - Key: Env
+        Value: !Ref 'Env'
   RdsSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
       VpcId: !Ref 'VpcId'
       GroupDescription: Allow MySQL (TCP3306)
       SecurityGroupIngress:
-        - IpProtocol: tcp
-          FromPort: 3306
-          ToPort: 3306
-          CidrIp: !Ref VpcApSubnet
+      - IpProtocol: tcp
+        FromPort: 3306
+        ToPort: 3306
+        CidrIp: !Ref 'VpcApSubnet'
       Tags:
-        - Key: CloudFormationArn
-          Value: !Ref 'AWS::StackId'
-        - Key: Env
-          Value: !Ref Env
-
+      - Key: CloudFormationArn
+        Value: !Ref 'AWS::StackId'
+      - Key: Env
+        Value: !Ref 'Env'
   MonitoringRdsRole:
     Type: AWS::IAM::Role
     Properties:
@@ -100,7 +93,6 @@ Resources:
       ManagedPolicyArns:
       - arn:aws:iam::aws:policy/service-role/AmazonRDSEnhancedMonitoringRole
       Path: /
-
   RdsDbCluster:
     Type: AWS::RDS::DBCluster
     Properties:
@@ -110,19 +102,17 @@ Resources:
       DatabaseName: !Ref 'RdsDbDatabaseName'
       Engine: aurora-mysql
       VpcSecurityGroupIds:
-        - !Ref 'RdsSecurityGroup'
-      DBClusterIdentifier : !Sub '${AWS::StackName}-dbcluster'
+      - !Ref 'RdsSecurityGroup'
+      DBClusterIdentifier: !Sub '${AWS::StackName}-dbcluster'
       DBClusterParameterGroupName: !Ref 'RdsDbClusterParameterGroup'
       PreferredBackupWindow: 18:05-18:35
       BackupRetentionPeriod: 7
       PreferredMaintenanceWindow: Thu:18:35-Thu:19:05
-      BackupRetentionPeriod: 7
       Tags:
-        - Key: CloudFormationArn
-          Value: !Ref 'AWS::StackId'
-        - Key: Env
-          Value: !Ref Env
-
+      - Key: CloudFormationArn
+        Value: !Ref 'AWS::StackId'
+      - Key: Env
+        Value: !Ref 'Env'
   RdsDbInstance1:
     Type: AWS::RDS::DBInstance
     Properties:
@@ -130,7 +120,7 @@ Resources:
       DBParameterGroupName: !Ref 'RdsDbParameterGroup'
       Engine: aurora-mysql
       DBClusterIdentifier: !Ref 'RdsDbCluster'
-      DBInstanceIdentifier : !Sub '${AWS::StackName}-dbinstance-1'
+      DBInstanceIdentifier: !Sub '${AWS::StackName}-dbinstance-1'
       AutoMinorVersionUpgrade: 'true'
       PubliclyAccessible: 'false'
       StorageEncrypted: 'false'
@@ -140,11 +130,10 @@ Resources:
       MonitoringInterval: 60
       MonitoringRoleArn: !GetAtt 'MonitoringRdsRole.Arn'
       Tags:
-        - Key: CloudFormationArn
-          Value: !Ref 'AWS::StackId'
-        - Key: Env
-          Value: !Ref Env
-
+      - Key: CloudFormationArn
+        Value: !Ref 'AWS::StackId'
+      - Key: Env
+        Value: !Ref 'Env'
   RdsDbInstance2:
     Type: AWS::RDS::DBInstance
     Condition: MultiAzEnable
@@ -153,7 +142,7 @@ Resources:
       DBParameterGroupName: !Ref 'RdsDbParameterGroup'
       Engine: aurora-mysql
       DBClusterIdentifier: !Ref 'RdsDbCluster'
-      DBInstanceIdentifier : !Sub '${AWS::StackName}-dbinstance-2'
+      DBInstanceIdentifier: !Sub '${AWS::StackName}-dbinstance-2'
       AutoMinorVersionUpgrade: 'true'
       PubliclyAccessible: 'false'
       SourceDBInstanceIdentifier: !Sub 'arn:aws:rds:${AWS::Region}:${AWS::AccountId}:db:${AWS::StackName}-dbinstance-1'
@@ -164,12 +153,10 @@ Resources:
       MonitoringInterval: 60
       MonitoringRoleArn: !GetAtt 'MonitoringRdsRole.Arn'
       Tags:
-        - Key: CloudFormationArn
-          Value: !Ref 'AWS::StackId'
-        - Key: Env
-          Value: !Ref Env
-
-
+      - Key: CloudFormationArn
+        Value: !Ref 'AWS::StackId'
+      - Key: Env
+        Value: !Ref 'Env'
   RdsDbClusterParameterGroup:
     Type: AWS::RDS::DBClusterParameterGroup
     Properties:
@@ -178,11 +165,10 @@ Resources:
       Parameters:
         server_audit_logging: 0
       Tags:
-        - Key: CloudFormationArn
-          Value: !Ref 'AWS::StackId'
-        - Key: Env
-          Value: !Ref Env
-
+      - Key: CloudFormationArn
+        Value: !Ref 'AWS::StackId'
+      - Key: Env
+        Value: !Ref 'Env'
   RdsDbParameterGroup:
     Type: AWS::RDS::DBParameterGroup
     Properties:
@@ -194,11 +180,10 @@ Resources:
         slow_query_log: 1
         long_query_time: 10
       Tags:
-        - Key: CloudFormationArn
-          Value: !Ref 'AWS::StackId'
-        - Key: Env
-          Value: !Ref Env
-
+      - Key: CloudFormationArn
+        Value: !Ref 'AWS::StackId'
+      - Key: Env
+        Value: !Ref 'Env'
   LogGroupRdsError:
     Type: AWS::Logs::LogGroup
     Properties:
@@ -209,13 +194,10 @@ Resources:
     Properties:
       LogGroupName: !Sub '/aws/rds/cluster/${AWS::StackName}-dbcluster/general'
       RetentionInDays: 14
-
 Outputs:
   RdsSecurityGroup:
     Value: !Ref 'RdsSecurityGroup'
-
   RdsDbClusterEndpoint:
     Value: !GetAtt 'RdsDbCluster.Endpoint.Address'
-
   RdsDbClusterReadEndpoint:
     Value: !GetAtt 'RdsDbCluster.ReadEndpoint.Address'
