[modify] - auditログのイベント定義追加 - スロークエリの閾値10→3秒に短縮 - ロググループの事前作成対象を追加

--- a/CFn/aurora-mysql-57/aurora-mysql57-multiaz.yaml
+++ b/CFn/aurora-mysql-57/aurora-mysql57-multiaz.yaml
@@ -163,6 +163,7 @@ Resources:
       Family: aurora-mysql5.7
       Parameters:
         server_audit_logging: 0
+        server_audit_events: 'CONNECT,QUERY,QUERY_DCL,QUERY_DDL,QUERY_DML,TABLE'
       Tags:
       - Key: CloudFormationArn
         Value: !Ref 'AWS::StackId'
@@ -177,7 +178,7 @@ Resources:
         aurora_lab_mode: 0
         general_log: 1
         slow_query_log: 1
-        long_query_time: 10
+        long_query_time: 3
       Tags:
       - Key: CloudFormationArn
         Value: !Ref 'AWS::StackId'
@@ -193,6 +194,17 @@ Resources:
     Properties:
       LogGroupName: !Sub '/aws/rds/cluster/${AWS::StackName}-dbcluster/general'
       RetentionInDays: 14
+  LogGroupRdsAudit:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub '/aws/rds/cluster/${AWS::StackName}-dbcluster/audit'
+      RetentionInDays: 14
+  LogGroupRdsSlowquery:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub '/aws/rds/cluster/${AWS::StackName}-dbcluster/slowquery'
+      RetentionInDays: 14
+
 Outputs:
   RdsSecurityGroup:
     Value: !Ref 'RdsSecurityGroup'
