[add] aurora can

--- a/CFn/aurora-mysql-57/aurora-mysql57-sample.yaml
+++ b/CFn/aurora-mysql-57/aurora-mysql57-sample.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: RDS Aurora MySQL5.6 MultiAZ(20180726)
+Description: RDS Aurora MySQL5.7 (20180725)
 Parameters:
   VpcId:
     Description: VPC ID
@@ -16,10 +16,11 @@ Parameters:
     Description: AP VPC subnet
     Type: String
     Default: 172.31.0.0/16
+
   RdsDbDatabaseName:
     Description: DbDatabaseName
     Type: String
-    Default: mysql56_database
+    Default: mysql57_database
   RdsDbMasterUsername:
     Description: RdsDbMasterUsername
     Type: String
@@ -33,6 +34,7 @@ Parameters:
     Description: DBInstanceClass
     Type: String
     Default: db.t2.small
+
   Env:
     Description: Choose the environment to create
     Type: String
@@ -41,6 +43,7 @@ Parameters:
     - development
     - staging
     - production
+
   MultiAzEnable:
     Description: Choose MultiAz Enable
     Type: String
@@ -48,36 +51,40 @@ Parameters:
     AllowedValues:
     - true
     - false
-Conditions:
-  MultiAzEnable: !Equals [!Ref 'MultiAzEnable', true]
+
+Conditions: 
+  MultiAzEnable: !Equals [ !Ref MultiAzEnable, true ]
+
 Resources:
   RdsDbSubnetGroup:
     Type: AWS::RDS::DBSubnetGroup
     Properties:
       DBSubnetGroupDescription: Database subnets for RDS
       SubnetIds:
-      - !Ref 'VpcRdsSubnetId1'
-      - !Ref 'VpcRdsSubnetId2'
+        - !Ref VpcRdsSubnetId1
+        - !Ref VpcRdsSubnetId2
       Tags:
-      - Key: CloudFormationArn
-        Value: !Ref 'AWS::StackId'
-      - Key: Env
-        Value: !Ref 'Env'
+        - Key: CloudFormationArn
+          Value: !Ref 'AWS::StackId'
+        - Key: Env
+          Value: !Ref Env
+
   RdsSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
       VpcId: !Ref 'VpcId'
       GroupDescription: Allow MySQL (TCP3306)
       SecurityGroupIngress:
-      - IpProtocol: tcp
-        FromPort: 3306
-        ToPort: 3306
-        CidrIp: !Ref 'VpcApSubnet'
+        - IpProtocol: tcp
+          FromPort: 3306
+          ToPort: 3306
+          CidrIp: !Ref VpcApSubnet
       Tags:
-      - Key: CloudFormationArn
-        Value: !Ref 'AWS::StackId'
-      - Key: Env
-        Value: !Ref 'Env'
+        - Key: CloudFormationArn
+          Value: !Ref 'AWS::StackId'
+        - Key: Env
+          Value: !Ref Env
+
   MonitoringRdsRole:
     Type: AWS::IAM::Role
     Properties:
@@ -93,6 +100,7 @@ Resources:
       ManagedPolicyArns:
       - arn:aws:iam::aws:policy/service-role/AmazonRDSEnhancedMonitoringRole
       Path: /
+
   RdsDbCluster:
     Type: AWS::RDS::DBCluster
     Properties:
@@ -100,28 +108,30 @@ Resources:
       MasterUsername: !Ref 'RdsDbMasterUsername'
       MasterUserPassword: !Ref 'RdsDbMasterUserPassword'
       DatabaseName: !Ref 'RdsDbDatabaseName'
-      Engine: aurora
+      Engine: aurora-mysql
       VpcSecurityGroupIds:
-      - !Ref 'RdsSecurityGroup'
-      DBClusterIdentifier: !Sub '${AWS::StackName}-dbcluster'
+        - !Ref 'RdsSecurityGroup'
+      DBClusterIdentifier : !Sub '${AWS::StackName}-dbcluster'
       DBClusterParameterGroupName: !Ref 'RdsDbClusterParameterGroup'
       PreferredBackupWindow: 18:05-18:35
       BackupRetentionPeriod: 7
       PreferredMaintenanceWindow: Thu:18:35-Thu:19:05
+      BackupRetentionPeriod: 7
       StorageEncrypted: 'false'
       Tags:
-      - Key: CloudFormationArn
-        Value: !Ref 'AWS::StackId'
-      - Key: Env
-        Value: !Ref 'Env'
+        - Key: CloudFormationArn
+          Value: !Ref 'AWS::StackId'
+        - Key: Env
+          Value: !Ref Env
+
   RdsDbInstance1:
     Type: AWS::RDS::DBInstance
     Properties:
       DBSubnetGroupName: !Ref 'RdsDbSubnetGroup'
       DBParameterGroupName: !Ref 'RdsDbParameterGroup'
-      Engine: aurora
+      Engine: aurora-mysql
       DBClusterIdentifier: !Ref 'RdsDbCluster'
-      DBInstanceIdentifier: !Sub '${AWS::StackName}-dbinstance-1'
+      DBInstanceIdentifier : !Sub '${AWS::StackName}-dbinstance-1'
       AutoMinorVersionUpgrade: 'true'
       PubliclyAccessible: 'false'
       PreferredMaintenanceWindow: Thu:19:05-Thu:19:35
@@ -130,59 +140,65 @@ Resources:
       MonitoringInterval: 60
       MonitoringRoleArn: !GetAtt 'MonitoringRdsRole.Arn'
       Tags:
-      - Key: CloudFormationArn
-        Value: !Ref 'AWS::StackId'
-      - Key: Env
-        Value: !Ref 'Env'
+        - Key: CloudFormationArn
+          Value: !Ref 'AWS::StackId'
+        - Key: Env
+          Value: !Ref Env
+
   RdsDbInstance2:
     Type: AWS::RDS::DBInstance
     Condition: MultiAzEnable
     Properties:
       DBSubnetGroupName: !Ref 'RdsDbSubnetGroup'
       DBParameterGroupName: !Ref 'RdsDbParameterGroup'
-      Engine: aurora
+      Engine: aurora-mysql
       DBClusterIdentifier: !Ref 'RdsDbCluster'
-      DBInstanceIdentifier: !Sub '${AWS::StackName}-dbinstance-2'
+      DBInstanceIdentifier : !Sub '${AWS::StackName}-dbinstance-2'
       AutoMinorVersionUpgrade: 'true'
       PubliclyAccessible: 'false'
-      PreferredMaintenanceWindow: Thu:19:35-Thu:20:05
+      SourceDBInstanceIdentifier: !Sub 'arn:aws:rds:${AWS::Region}:${AWS::AccountId}:db:${AWS::StackName}-dbinstance-1'
+      PreferredMaintenanceWindow: Thu:19:35-Thu:19:35
       AvailabilityZone: !Select [1, !GetAZs {Ref: 'AWS::Region'}]
       DBInstanceClass: !Ref 'RdsDbInstanceClass'
       MonitoringInterval: 60
       MonitoringRoleArn: !GetAtt 'MonitoringRdsRole.Arn'
       Tags:
-      - Key: CloudFormationArn
-        Value: !Ref 'AWS::StackId'
-      - Key: Env
-        Value: !Ref 'Env'
+        - Key: CloudFormationArn
+          Value: !Ref 'AWS::StackId'
+        - Key: Env
+          Value: !Ref Env
+
+
   RdsDbClusterParameterGroup:
     Type: AWS::RDS::DBClusterParameterGroup
     Properties:
       Description: CloudFormation Aurora Cluster Parameter Group
-      Family: aurora5.6
+      Family: aurora-mysql5.7
       Parameters:
         server_audit_logging: 0
         server_audit_events: 'CONNECT,QUERY,QUERY_DCL,QUERY_DDL,QUERY_DML,TABLE'
       Tags:
-      - Key: CloudFormationArn
-        Value: !Ref 'AWS::StackId'
-      - Key: Env
-        Value: !Ref 'Env'
+        - Key: CloudFormationArn
+          Value: !Ref 'AWS::StackId'
+        - Key: Env
+          Value: !Ref Env
+
   RdsDbParameterGroup:
     Type: AWS::RDS::DBParameterGroup
     Properties:
       Description: CloudFormation Aurora Parameter Group
-      Family: aurora5.6
+      Family: aurora-mysql5.7
       Parameters:
         aurora_lab_mode: 0
         general_log: 1
         slow_query_log: 1
-        long_query_time: 3
+        long_query_time: 10
       Tags:
-      - Key: CloudFormationArn
-        Value: !Ref 'AWS::StackId'
-      - Key: Env
-        Value: !Ref 'Env'
+        - Key: CloudFormationArn
+          Value: !Ref 'AWS::StackId'
+        - Key: Env
+          Value: !Ref Env
+
   LogGroupRdsError:
     Type: AWS::Logs::LogGroup
     Properties:
@@ -193,21 +209,13 @@ Resources:
     Properties:
       LogGroupName: !Sub '/aws/rds/cluster/${AWS::StackName}-dbcluster/general'
       RetentionInDays: 14
-  LogGroupRdsAudit:
-    Type: AWS::Logs::LogGroup
-    Properties:
-      LogGroupName: !Sub '/aws/rds/cluster/${AWS::StackName}-dbcluster/audit'
-      RetentionInDays: 14
-  LogGroupRdsSlowquery:
-    Type: AWS::Logs::LogGroup
-    Properties:
-      LogGroupName: !Sub '/aws/rds/cluster/${AWS::StackName}-dbcluster/slowquery'
-      RetentionInDays: 14
 
 Outputs:
   RdsSecurityGroup:
     Value: !Ref 'RdsSecurityGroup'
+
   RdsDbClusterEndpoint:
     Value: !GetAtt 'RdsDbCluster.Endpoint.Address'
+
   RdsDbClusterReadEndpoint:
     Value: !GetAtt 'RdsDbCluster.ReadEndpoint.Address'
